# be/api/handler/block_handler.go
@@ -5,6 +5,7 @@ import (
 	"BE_Friends_Management/internal/domain/dto"
 	service "BE_Friends_Management/internal/service/block_relationship"
 	"BE_Friends_Management/pkg"
+	"BE_Friends_Management/pkg/utils"
 	"errors"
 	"net/http"
 
@@ -27,16 +28,22 @@ func NewBlockRelationshipHandler(service service.BlockRelationshipService) *Bloc
 // @Accept 		json
 // @Produce      json
 // @Param 		 request body dto.CreateBlockRequest true "Requestor's email and target's email"
+// @param Authorization header string true "Authorization"
 // @Router       /api/block [POST]
 // @Success      200   {object}  dto.ApiResponseSuccessNoData
+// @securityDefinitions.apiKey token
+// @in header
+// @name Authorization
+// @Security JWT
 func (h *BlockRelationshipHandler) CreateBlockRelationship(c *gin.Context) {
 	defer pkg.PanicHandler(c)
+	authUserId := utils.GetAuthUserID(c)
 	var request dto.CreateBlockRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
 		log.Error("Happened error when mapping request. Error: ", err)
 		pkg.PanicExeption(constant.InvalidRequest, "Invalid request format.")
 	}
-	err := h.service.CreateBlockRelationship(request.Requestor, request.Target)
+	err := h.service.CreateBlockRelationship(authUserId, request.Requestor, request.Target)
 	if err != nil {
 		log.Error("Happened error when creating new block relationship. Error: ", err)
 		switch {
@@ -47,6 +54,8 @@ func (h *BlockRelationshipHandler) CreateBlockRelationship(c *gin.Context) {
 		case errors.Is(err, service.ErrAlreadyBlocked):
 			pkg.PanicExeption(constant.Conflict, err.Error())
 		case errors.Is(err, service.ErrNotSubscribed):
+			pkg.PanicExeption(constant.StatusForbidden, err.Error())
+		case errors.Is(err, service.ErrNotPermitted):
 			pkg.PanicExeption(constant.StatusForbidden, err.Error())
 		default:
 			pkg.PanicExeption(constant.UnknownError, "Happened error when creating new block relationship.")
